<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>map_merge_3d</name>
  <version>0.0.0</version>
  <description>3D Map Merging for ROS 2</description>
  <maintainer email="joshibasu62@gmail.com">basanta-joshi</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS 2 dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  
  <!-- PCL bridge dependencies -->
  <depend>pcl_conversions</depend>
  <depend>libpcl-all-dev</depend> <!-- System dependency for PCL -->

  <!-- Transform dependencies (Crucial for Map Merging) -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_eigen</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>